--- a/templates/formulario.html
+++ b/templates/formulario.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="zxx">
 
 <head>
@@ -10,8 +11,8 @@
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<link href="img/favicon.png" rel="icon" type="image/png">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-	<link href="css/bootstrap-light.css" rel="stylesheet">
-	<link href="css/theme-light.css" rel="stylesheet">
+	<link href="{% static 'css/bootstrap-light.css' %}" rel="stylesheet">
+	<link href="{% static 'css/theme-light.css' %}" rel="stylesheet">
 	<script src="js/vendor/wow.js"></script>
 </head>
 
