--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
                     </li>
                     <li><a href="{% url 'contact' %}">Contato</a>
                     </li>
-                    <li><a href="{% url 'formulario' %}">Cadastrar</a>
+                    <li><a href="{% url 'cadastro' %}">Cadastrar</a>
                     </li>
                     <li><a href="{% url 'login' %}">Entrar</a>
                     </li>
