--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -15,6 +15,60 @@
                     <p class="text-center inverse">Faça seu cadastro</p>
                 </div>
             </div>
+
+             <div class="col-md-8 col-md-push-2 ">
+                        <form >
+
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome" required>
+                            </div>
+							<div class="form-group">
+                                <input type="text" class="form-control" id="sobrenome" name="sobrenome" placeholder="Sobrenome" required>
+                            </div>
+							<div class="form-group">
+                                <input type="date" class="form-control" id="date" name="date" placeholder="Data Nascimento" required>
+                            </div>
+							<div class="form-group">
+                                <input type="text" class="form-control" id="profissao" name="profissao" placeholder="Profissão" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="phone" class="form-control" id="celular" name="celular" placeholder="Celular" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control" id="senha" name="senha" placeholder="Senha" required>
+                            </div>
+							<div class="form-group">
+                                <input type="text" class="form-control" id=cpf_cnpj name="cpf_cnpj" placeholder="CPF/CNPJSS" required>
+                            </div>
+							<div class="form-group">
+                                <input type="text" class="form-control" id="empresa" name="empresa" placeholder="Empresa" required>
+                            </div>
+							<div class="form-group">
+                                <input type="text" class="form-control" id="rua" name="rua" placeholder="Rua" required>
+                            </div>
+							<div class="form-group">
+                                <input type="text" class="form-control" id="bairro" name="bairro" placeholder="Bairro" required>
+                            </div>
+							<div class="form-group">
+                                <input type="text" class="form-control" id="cep" name="cep" placeholder="CEP" required>
+                            </div>
+							<div class="form-group">
+                                <input type="text" class="form-control" id="cidade" name="cidade" placeholder="Cidade" required>
+                            </div>
+							<div class="form-group">
+                                <input type="text" class="form-control" id="estado" name="estado" placeholder="Estado" required>
+                            </div>
+							<div class="form-group">
+                                <input type="text" class="form-control" id="pais" name="pais" placeholder="Pais" required>
+                            </div>
+                            <button type="button" id="submit" name="submit" class="btn btn-margin btn-primary btn-lg text-center">Salvar</button>
+                        </form>
+                    </div>
+                </div>
+
         </div>
     </section>
 
