--- a/static/css/bootstrap-light.css
+++ b/static/css/bootstrap-light.css
@@ -1533,7 +1533,8 @@ pre {
   margin-right: auto;
   margin-left: auto;
   padding-left: 15px;
-  padding-right: 15px; }
+  padding-right: 15px;
+  background: linear-gradient(#3aaddc, #f5f5f5); }
   .container-fluid:before, .container-fluid:after {
     content: " ";
     display: table; }
@@ -3700,6 +3701,7 @@ tbody.collapse.in {
   padding-right: 15px;
   padding-left: 15px;
   border-top: 1px solid transparent;
+  background: linear-gradient(#3aaddc, #f5f5f5);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
   -webkit-overflow-scrolling: touch; }
   .navbar-collapse:before, .navbar-collapse:after {
