--- a/templates/base.html
+++ b/templates/base.html
@@ -28,24 +28,24 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'index-light' %}"><img src="{% static 'img/logo-assinaki_2.png' %}" alt="logo">
+                <a class="navbar-brand" href="{% url 'core:index-light' %}"><img src="{% static 'img/logo-assinaki_2.png' %}" alt="logo">
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'index-light' %}">Home</a>
+                    <li><a href="{% url 'core:index-light' %}">Home</a>
                     </li>
-                    <li><a href="{% url 'about' %}">about us</a>
+                    <li><a href="{% url 'core:about' %}">about us</a>
                     </li>
-                    <li><a href="{% url 'services' %}">Services</a>
+                    <li><a href="{% url 'servico:services' %}">Services</a>
                     </li>
-                    <li><a href="{% url 'clients' %}">Clientes</a>
+                    <li><a href="{% url 'core:clients' %}">Clientes</a>
                     </li>
-                    <li><a href="{% url 'contact' %}">Contato</a>
+                    <li><a href="{% url 'core:contact' %}">Contato</a>
                     </li>
-                    <li><a href="{% url 'cadastro' %}">Cadastrar</a>
+                    <li><a href="{% url 'conta:cadastro' %}">Cadastrar</a>
                     </li>
-                    <li><a href="{% url 'login' %}">Entrar</a>
+                    <li><a href="{% url 'conta:login' %}">Entrar</a>
                     </li>
                 </ul>
             </div>
