--- a/templates/index-light.html
+++ b/templates/index-light.html
@@ -33,8 +33,8 @@
             </div>
         </div>
         <div class="home-buttons text-center">
-            <a href="#about" class="btn btn-margin btn-lg  btn-primary">estimate project</a>
-            <a href="#about" class="btn btn-margin btn-lg  btn-default">about us</a>
+            <a href="{% url 'core:about' %}" class="btn btn-margin btn-lg  btn-primary">estimate project</a>
+            <a href="{% url 'core:about' %}" class="btn btn-margin btn-lg  btn-default">about us</a>
         </div>
     </section>
 
