--- a/templates/login.html
+++ b/templates/login.html
@@ -11,10 +11,25 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 services-introduction">
-                    <h2 class="text-center">Acesso</h2>
-                    <p class="text-center inverse">Faça seu login</p>
+
+
                 </div>
             </div>
+            <div class="col-md-4 col-md-push-4 ">
+                        <form method="POST">
+                             {% csrf_token %}
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="login" name="login" placeholder="Login" required>
+                            </div>
+							<div class="form-group">
+                                <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
+                            </div>
+                            <a href=”html://….”>Esqueceu a senha</a>
+                            <br/>
+                            <br/>
+                            <button type="button" id="submit" name="submit" class="btn btn-margin btn-primary btn-lg text-center">Salvar</button>
+                        </form>
+                    </div>
         </div>
     </section>
 
