--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Contato | {{ block.super }}
+    {{ title|capfirst }} | {{ block.super }}
 {% endblock %}
 
 {% load static %}
