--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -17,15 +17,18 @@
             </div>
 
              <div class="col-md-8 col-md-push-2 ">
-                        <form method="POST">
+                        <form method="POST" >
                             {% csrf_token %}
-                            <div class="form-group" >
-                                <spam class="form-control" >{{ form_pais }}</spam>
-                                <spam class="form-control" >{{ form_uf }}</spam>
-                                <spam class="form-control" >{{ form_cidade }}</spam>
-                                <spam class="form-control" >{{ form_bairro }}</spam>
-                                <spam class="form-control" >{{ form_rua }}</spam>
-                                <!---->
+                            {{ form_cadastro.non_field_errors }}
+
+
+                            <div class="form-group" class="form-control">
+                                {{ form_cadastro.label_tag }}
+                                {{ form_cadastro }}
+                                {{ form_cadastro.errors }}
+                            </div>
+
+                            <!---->
                                 <!--<input type="text" class="form-control" id="nome" name="nome" placeholder="Nome" required>-->
                             <!--</div>-->
 							<!--<div class="form-group">-->
@@ -69,8 +72,7 @@
                             <!--</div>-->
 							<!--<div class="form-group">-->
                                 <!--<input type="text" class="form-control" id="pais" name="pais" placeholder="Pais" required>-->
-                            </div>
-                            <button type="button" id="submit" name="submit" class="btn btn-margin btn-primary btn-lg text-center">Salvar</button>
+                            <button type="submit" id="submit" name="submit" class="btn btn-margin btn-primary btn-lg text-center">Cadastrar</button>
                         </form>
                     </div>
                 </div>
