--- a/templates/base.html
+++ b/templates/base.html
@@ -45,8 +45,14 @@
                     </li>
                     <li><a href="{% url 'conta:cadastro' %}">Cadastrar</a>
                     </li>
+                    {%if user.is_authenticated %}
+                    <li><a href="{% url 'conta:logout' %}">Sair</a>
+                    </li>
+                    {% else %}
                     <li><a href="{% url 'conta:login' %}">Entrar</a>
                     </li>
+                    {% endif %}
+
                 </ul>
             </div>
         </div>
