--- a/templates/login.html
+++ b/templates/login.html
@@ -18,14 +18,16 @@
             <div class="col-md-4 col-md-push-4 ">
                         <form method="POST">
                              {% csrf_token %}
-                            {{ form_login.non_field_errors }}
+                            {{ form.non_field_errors }}
 
+                            {% for field in form %}
                             <div class="form-group" class="form-control">
-                                {{ form_login.label_tag }}
-                                {{ form_login }}
-                                {{ form_login.errors }}
-                            </div>
+                                {{ field.label_tag }}
+                                {{ field }}
+                                {{ field.errors }}
 
+                            </div>
+                            {% endfor %}
                             <a href=”html://….”>Esqueceu a senha</a>
                             <br/>
                             <br/>
