--- a/templates/login.html
+++ b/templates/login.html
@@ -18,13 +18,15 @@
             <div class="col-md-4 col-md-push-4 ">
                         <form method="POST">
                              {% csrf_token %}
-                            {{ form_login.non_field_errors }}
+                            {{ form.non_field_errors }}
 
+                            {% for e in form %}
                             <div class="form-group" class="form-control">
-                                {{ form_login.label_tag }}
-                                {{ form_login }}
-                                {{ form_login.errors }}
+                                {{ e.label_tag }}
+                                {{ e }}
+                                {{ e.errors }}
                             </div>
+                            {% endfor %}
 
                             <a href=”html://….”>Esqueceu a senha</a>
                             <br/>
