--- a/templates/login.html
+++ b/templates/login.html
@@ -18,16 +18,21 @@
             <div class="col-md-4 col-md-push-4 ">
                         <form method="POST">
                              {% csrf_token %}
-                            {{ form.non_field_errors }}
+                            {{ form_login.non_field_errors }}
 
-                                {% for field in form %}
+                                <!--{% for field in form %}-->
                             <div class="form-group" class="form-control">
-                                {{ field.label_tag }}
-                                {{ field }}
-                                {{ field.errors }}
+                                <!--{{ field.label_tag }}-->
+                                <!--{{ field }}-->
+                                <!--{{ field.errors }}-->
+
+                                {{ form_login.label_tag }}
+                                {{ form_login }}
+                                {{ form_login.errors }}
+
 
                             </div>
-                            {% endfor %}
+                            <!--{% endfor %}-->
                             <a href=”html://….”>Esqueceu a senha</a>
                             <br/>
                             <br/>
