--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -28,6 +28,12 @@
                                 {{ form_cadastro }}
                                 {{ form_cadastro.errors }}
 
+                                {{ field.label_tag }}
+                                {{ field }}
+                                {{ field.errors }}
+
+
+
                             </div>
 
                             <button type="submit" id="submit" name="submit" class="btn btn-margin btn-primary btn-lg text-center">Cadastrar</button>
