--- a/templates/login.html
+++ b/templates/login.html
@@ -26,9 +26,9 @@
                                 <!--{{ field }}-->
                                 <!--{{ field.errors }}-->
 
-                                {{ form_login.label_tag }}
-                                {{ form_login }}
-                                {{ form_login.errors }}
+                                <!--{{ form_login.label_tag }}-->
+                                <!--{{ form_login }}-->
+                                <!--{{ form_login.errors }}-->
 
 
                             </div>
@@ -38,6 +38,7 @@
                             <br/>
                             <button type="submit" id="submit" name="submit" class="btn btn-margin btn-primary btn-lg text-center">Salvar</button>
                         </form>
+
                     </div>
         </div>
     </section>
