--- a/templates/login.html
+++ b/templates/login.html
@@ -7,39 +7,47 @@
 {% load static %}
 {% block container %}
 
+
+
 <section id="login" class="services section">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 services-introduction">
-                    <h2 class="text-center">Login</h2>
-                    <p class="text-center inverse">Acesse sua conta por meio do seu login e senha</p>
+                    <!--<h2 class="text-center">Login</h2>-->
+                    <!--<p class="text-center inverse">Acesse sua conta por meio do seu login e senha</p>-->
                 </div>
             </div>
-            <div class="col-md-4 col-md-push-4 ">
-                        <form method="POST">
-                             {% csrf_token %}
-                            {{ form_login.non_field_errors }}
 
-                                <!--{% for field in form %}-->
-                            <div class="form-group" class="form-control">
-                                <!--{{ field.label_tag }}-->
+             <div class="col-md-4 col-md-push-4 ">
+                        <form method="POST" >
+                            {% csrf_token %}
+                            {{ form_cadastro.non_field_errors }}
+
+                            <div class="form-group"class="form-control">
+
+                                 <!--{{ field.label_tag }}-->
                                 <!--{{ field }}-->
                                 <!--{{ field.errors }}-->
 
-                                <!--{{ form_login.label_tag }}-->
-                                <!--{{ form_login }}-->
-                                <!--{{ form_login.errors }}-->
+
+                                {{ form_login.label_tag }}
+                                {{ form_login }}
+                                {{ form_login.errors }}
 
 
                             </div>
-                            <!--{% endfor %}-->
                             <a href=”html://….”>Esqueceu a senha</a>
                             <br/>
                             <br/>
-                            <button type="submit" id="submit" name="submit" class="btn btn-margin btn-primary btn-lg text-center">Salvar</button>
-                        </form>
+                            <a href=”html://….”>Criar conta</a>
+                            <br/>
+                            <br/>
 
+                            <button type="submit" id="submit" name="submit" class="btn btn-margin btn-primary btn-lg text-center">Acessar</button>
+                        </form>
                     </div>
+                </div>
+
         </div>
     </section>
 
