--- a/templates/login.html
+++ b/templates/login.html
@@ -30,9 +30,13 @@
                                 <!--{{ field.errors }}-->
 
 
-                                {{ form_login.label_tag }}
-                                {{ form_login }}
-                                {{ form_login.errors }}
+                                <!--{{ form_login.label_tag }}-->
+                                <!--{{ form_login }}-->
+                                <!--{{ form_login.errors }}-->
+
+                                {{ form.label_tag }}
+                                {{ form }}
+                                {{ form.errors }}
 
 
                             </div>
