envio de email para cadastro

--- a/templates/login.html
+++ b/templates/login.html
@@ -34,13 +34,19 @@
                                 <!--{{ form_login }}-->
                                 <!--{{ form_login.errors }}-->
 
-                                {{ form.label_tag }}
-                                {{ form }}
-                                {{ form.errors }}
+
+                                 {{ form.label_tag }}
+                                 {{ form }}
+                                 {{ form.errors }}
+
+
+                                <!--{{ form_login.label_tag }}-->
+                                <!--{{ form_login }}-->
+                                <!--{{ form_login.errors }}-->
 
 
                             </div>
-                            <a href=”html://….”>Esqueceu a senha</a>
+                            <a href=”form”>Esqueceu a senha</a>
                             <br/>
                             <br/>
                             <a href=”html://….”>Criar conta</a>
