templates de email para cadastro and senha

--- a/templates/login.html
+++ b/templates/login.html
@@ -30,20 +30,9 @@
                                 <!--{{ field }}-->
                                 <!--{{ field.errors }}-->
 
-
-                                <!--{{ form_login.label_tag }}-->
-                                <!--{{ form_login }}-->
-                                <!--{{ form_login.errors }}-->
-
-
-                                 {{ form.label_tag }}
-                                 {{ form }}
-                                 {{ form.errors }}
-
-
-                                <!--{{ form_login.label_tag }}-->
-                                <!--{{ form_login }}-->
-                                <!--{{ form_login.errors }}-->
+                                {{ form_login.label_tag }}
+                                {{ form_login }}
+                                {{ form_login.errors }}
 
 
                             </div>
