--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -27,11 +27,7 @@
                                 {{ form_cadastro.label_tag }}
                                 {{ form_cadastro }}
                                 {{ form_cadastro.errors }}
-
-
-
-
-
+                                {{ form.media }}
                             </div>
 
                             <button type="submit" id="submit" name="submit" class="btn btn-margin btn-primary btn-lg text-center">Cadastrar</button>
