--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load bootstrap %}
 {% block title %}
     {{ title|capfirst }} | {{ block.super }}
 {% endblock %}
@@ -19,14 +19,14 @@
             </div>
 
              <div class="col-md-4 col-md-push-4 ">
-                        <form method="POST" >
+                        <form method="POST">
                             {% csrf_token %}
                             {{ form.non_field_errors }}
 
-                            <div class="form-group"class="form-control">
+                            <div class="form-group" class="form-control">
 
                                  {{ form.label_tag }}
-                                 {{ form.as_p }}
+                                 {{ form|bootstrap }}
                                  {{ form.errors }}
 
                             </div>
