--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,13 +1,11 @@
 {% extends "base.html" %}
-
+{% load bootstrap %}
 {% block title %}
     {{ title|capfirst }} | {{ block.super }}
 {% endblock %}
 
 {% load static %}
 {% block container %}
-
-
 
 <section id="login" class="services section">
         <div class="container">
@@ -19,24 +17,19 @@
             </div>
 
              <div class="col-md-4 col-md-push-4 ">
-                        <form method="POST" >
+                        <form method="POST"   >
                             {% csrf_token %}
                             {{ form.non_field_errors }}
 
-                            <div class="form-group"class="form-control">
+                            <div class="form-group" class="form-control">
+
 
                                  {{ form.label_tag }}
-                                 {{ form.as_p }}
+                                 {{ form|bootstrap }}
                                  {{ form.errors }}
 
-                            </div>
-                            <a href="{% url 'conta:password_reset' %}">Esqueceu a senha</a>
-                            <br/>
-                            <br/>
-                            <a href="{% url 'conta:cadastro' %}">Criar conta</a>
-                            <br/>
-                            <br/>
 
+                            </div>
                             <button type="submit" id="submit" name="submit" class="btn btn-margin btn-primary btn-lg text-center">Acessar</button>
                         </form>
                     </div>
