--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -18,26 +18,21 @@
                 </div>
             </div>
 
-             <div class="col-md-4 col-md-push-4 ">
-                        <form method="POST" >
+             <div class="col-md-8 col-md-push-2 ">
+                        <form method="POST">
                             {% csrf_token %}
                             {{ form.non_field_errors }}
 
-                            <div class="form-group"class="form-control">
+                            <div class="form-group" class="form-control">
+                                <br>
+                                <br>
 
-                                 {{ form.label_tag }}
-                                 {{ form.as_p }}
-                                 {{ form.errors }}
+                                <h4> Sua nova senha foi configurada com sucesso.
+                                    <br>
+                                    <br>
+                                    Agora você pode acessar sua conta usando sua nova senha. <a href="{% url 'conta:login' %}"> Clique aqui para logar  </a></h4>
 
                             </div>
-                            <a href="{% url 'conta:password_reset' %}">Esqueceu a senha</a>
-                            <br/>
-                            <br/>
-                            <a href="{% url 'conta:cadastro' %}">Criar conta</a>
-                            <br/>
-                            <br/>
-
-                            <button type="submit" id="submit" name="submit" class="btn btn-margin btn-primary btn-lg text-center">Acessar</button>
                         </form>
                     </div>
                 </div>
