--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -7,8 +7,6 @@
 {% load static %}
 {% block container %}
 
-
-
 <section id="login" class="services section">
         <div class="container">
             <div class="row">
@@ -18,26 +16,18 @@
                 </div>
             </div>
 
-             <div class="col-md-4 col-md-push-4 ">
-                        <form method="POST" >
+             <div class="col-md-8 col-md-push-2 ">
+                        <form method="POST">
                             {% csrf_token %}
                             {{ form.non_field_errors }}
 
-                            <div class="form-group"class="form-control">
+                            <div class="form-group" class="form-control">
 
-                                 {{ form.label_tag }}
-                                 {{ form.as_p }}
-                                 {{ form.errors }}
+                               <h3> E-mail de redefinição de senha enviado </h3>
+                                     <p> Enviámos-lhe instruções para definir a sua senha, se existir uma conta com o email que introduziu. Você deve recebê-los em breve. </P>
 
+                                    <p> Se você não receber um e-mail, verifique se inseriu o endereço com o qual se registrou e verifique sua pasta de spam. </p>
                             </div>
-                            <a href="{% url 'conta:password_reset' %}">Esqueceu a senha</a>
-                            <br/>
-                            <br/>
-                            <a href="{% url 'conta:cadastro' %}">Criar conta</a>
-                            <br/>
-                            <br/>
-
-                            <button type="submit" id="submit" name="submit" class="btn btn-margin btn-primary btn-lg text-center">Acessar</button>
                         </form>
                     </div>
                 </div>
